# arxml-sorted-diff

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: GENERATE.md
samples/: generated.arxml
samples/left/: generated.arxml
samples/right/: generated.arxml
src/: cli.rs  diff.rs  lib.rs  main.rs  parse.rs  render.rs  tui.rs
tests/: diff_tests.rs  element_name_tests.rs  integration_test.rs
tests/fixtures/: sample-left.arxml  sample-right.arxml
