[package]
name = "arxml-diff"
version = "0.1.0"
edition = "2021"

[dependencies]
quick-xml = "0.31"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
similar = "2"
crossterm = "0.26"
ratatui = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]

[workspace]
